<resources>
    <string name="app_name" translatable="false">HealthMate</string>
    <string name="login">Log In</string>
    <string name="username_ph">Username</string>
    <string name="password_ph">Password</string>
    <string name="signup">Sign Up</string>
    <string name="no_account">You have not an account yet?</string>
    <string name="empty_list">Empty list</string>
    <string name="delete_measurement">Do you want to delete the measurement?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="enter_message">Enter Message</string>
    <string name="start_chatting">Start chatting for any query...</string>
    <string name="incorrect_cred">Incorrect credentials</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat password</string>
    <string name="user_exists">User already exists.</string>
    <string name="diff_pass">Passwords do not match.</string>
    <string name="invalid_mail">Enter a valid email.</string>
    <string name="fill_fields">Fill in all the fields.</string>
    <string name="enterExerciseData">Enter exercise data</string>
    <string name="enterMedicionData">Add information of the measurement</string>
    <string name="error">An error has occurred</string>
    <string name="delete_medicine">Do you want to delete the medicine?</string>
    <string name="please_enter_message">Please enter your message...</string>
    <string name="filter_exercises">Filter exercises</string>
    <string name="cant_obtain_location">Unable to get current location</string>
    <string name="register_activity_time_title">¡It\'s time to register a new activity!</string>
    <string name="register_activity_time_text">You haven\'t register any activity today. ¡Register your activity now!</string>
    <string name="change_language">Change language</string>
    <string name="map_menu">Map</string>
    <string name="sport_menu">Sport</string>
    <string name="home_menu">Home</string>
    <string name="measurements_menu">Measurements</string>
    <string name="chat_menu">Chat</string>
    <string name="consumption_menu">Consumption</string>
    <string name="medicines_menu">Medicines</string>
    <string name="share_menu">Share</string>
    <string name="about_menu">About</string>
    <string name="log_out_menu">Log Out</string>
    <string name="type">Type</string>
    <string name="title">Title</string>
    <string name="distance_km">Distancia (kms)</string>
    <string name="date">Date (default today and now)</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="measurement">Measurement (include unit of measurement)</string>
    <string name="date_without_default">Date</string>
    <string name="derechos_reservados_healthmate">HealthMate © 2023 - All rights reserved</string>
    <string name="call_nearest_dr">Call nearest Dr.</string>
    <string name="error_2">A problem has occurred.</string>
    <string name="loading">Loading. Please wait...</string>
    <string name="app_info">
        ¡Discover HealthMate, your personalised Health Mate!\n\n

        HealthMate is an app designed so as to help you improving your welfare and living a
        healthy lifestyle. With a vast variety of characteristics and functionalities, it offers
        you the possibility to manage your exercise measurements, control your eating habits,
        track your progress and much more.\n\n

        Main features of HealthMate:\n\n

        - Record your exercises: Keep a register of your physical activities, such as running,
        swimming, cycling, etc., for effective tracking of your exercise routine.\n
        - Graphs and statistics: Visualise your progress through detailed graphs and statistics,
        allowing you to evaluate your progress and set realistic goals.\n
        - Reminders and alarms: Set personalised reminders and alarms to keep you motivated and not
        forget your healthy habits and activities.\n\n

        Download HealhMate now and start taking care of health and welfare in an easy and
        effective way.\n\n

        ¡Improve your lifestyle using HealthMate!
    </string>
    <string name="share_healthmate">Share HealthMate</string>
    <string name="about_text">
        ¡Welcome to our app!\n\n

        At HealthMate, we are dedicated to providing you with a unique and enriching experience for
        your wellness and health. Our mission is to help you lead a healthy lifestyle by providing
        you with tools and resources that make achieving your goals fun and easy. \n\n

        ¡Thanks for choosing us!\n\n

        The HealthMate team
    </string>
    <string name="filter_measurements">Filter measurements</string>
    <string name="nombre">Name</string>
    <string name="change_style">Change style</string>
    <string name="dark">Dark</string>
    <string name="normal">Normal</string>
    <string name="select_style">Select style</string>
    <string name="style_changed_to">"Style changed to "</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="hospitals">Hospitals</string>
</resources>