<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/grupo1">

        <item
            android:id="@+id/call"
            android:title="@string/call_nearest_dr"
            android:icon="@drawable/call" />

        <item
            android:id="@+id/medicines"
            android:title="@string/medicines_menu"
            android:icon="@drawable/pills" />

    </group>

    <group android:id="@+id/grupo2">

    <item
        android:id="@+id/shareFragment"
        android:title="@string/share_menu"
        android:icon="@drawable/share" />

    <item
        android:id="@+id/about"
        android:title="@string/about_menu"
        android:icon="@drawable/about" />

    <item
        android:id="@+id/change_language"
        android:title="@string/change_language"
        android:icon="@drawable/language" />

    <item
        android:id="@+id/logoutFragment"
        android:title="@string/log_out_menu"
        android:icon="@drawable/logout" />

    </group>
</menu>