<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mapaFragment"
        android:title="@string/map_menu"
        android:icon="@drawable/map" />

    <item
        android:id="@+id/ejercicioFragment"
        android:title="@string/sport_menu"
        android:icon="@drawable/sport" />

    <item
        android:id="@+id/pantallaPrincipalFragment"
        android:title="@string/home_menu"
        android:icon="@drawable/home" />

    <item
        android:id="@+id/medicionesFragment"
        android:title="@string/measurements_menu"
        android:icon="@drawable/measurements" />
    <item
        android:id="@+id/chatFragment"
        android:title="@string/chat_menu"
        android:icon="@drawable/chat" />

</menu>