<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="92dp"
            android:layout_height="99dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="36dp"
            android:src="@mipmap/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ePassword"
            android:layout_width="346dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/st_edittext"
            android:drawableStart="@drawable/password"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/password_ph"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            app:layout_constraintStart_toStartOf="@+id/eMail"
            app:layout_constraintTop_toBottomOf="@+id/eMail" />

        <EditText
            android:id="@+id/ePasswordRepeat"
            android:layout_width="346dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/st_edittext"
            android:drawableStart="@drawable/password"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            app:layout_constraintStart_toStartOf="@+id/ePassword"
            app:layout_constraintTop_toBottomOf="@+id/ePassword" />

        <EditText
            android:id="@+id/eUsername"
            android:layout_width="346dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/st_edittext"
            android:drawableStart="@drawable/person"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/username_ph"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
             />

        <EditText
            android:id="@+id/eMail"
            android:layout_width="346dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/st_edittext"
            android:drawableStart="@drawable/email"
            android:drawablePadding="15dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            app:layout_constraintStart_toStartOf="@+id/eUsername"
            app:layout_constraintTop_toBottomOf="@+id/eUsername" />

        <Button
            android:id="@+id/bSignUp"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:text="@string/signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ePasswordRepeat" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>